<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="98"
        android:showAsAction="always"
        android:title="@string/action_settings"
		android:icon="@drawable/ic_action_settings" />
    <item
        android:id="@+id/action_rateapp"
        android:orderInCategory="97"
        android:showAsAction="collapseActionView"
        android:title="@string/action_rateapp"
		android:icon="@drawable/ic_menu_star2" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="99"
        android:showAsAction="always"
        android:title="@string/action_help"
		android:icon="@drawable/ic_action_help_on" />
    <item
        android:id="@+id/action_contactus"
        android:orderInCategory="96"
        android:showAsAction="collapseActionView"
        android:title="Contact Us" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="90"
        android:showAsAction="collapseActionView"
        android:title="About" />
    
</menu>
